# winq

./: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package.json  vite.config.ts
docs/files/: project.md
example/: project.yaml
src/: main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  modules.rs
src-tauri/src/modules/: dmx_controller.rs  file.rs  open_dmx.rs  port.rs  usb.rs
src-tauri/src/modules/dmx_controller/: lib.rs  open_dmx.rs
src-tauri/src/modules/dmx_controller/open_dmx/: dmx_serial.rs
src-tauri/src/modules/open_dmx/: dmx_serial.rs  error.rs  thread.rs
src/components/base/SideBar/: index.module.scss  index.tsx
src/components/base/TitleBar/: index.module.scss  index.tsx
src/components/pages/Controller/: index.module.scss  index.tsx
src/components/pages/SimpleController/: index.tsx
src/components/shared/Button/: index.module.scss  index.tsx
src/hooks/: useUniverse.ts
src/layouts/Base/: index.module.scss  index.tsx
src/layouts/Window/: index.module.scss  index.tsx
src/pages/Controller/: index.tsx
src/pages/ErrorBoundary/: index.tsx
src/pages/Functions/: index.tsx
src/pages/IoConnection/: index.tsx
src/pages/Settings/: index.tsx
src/pages/SimpleController/: index.tsx
src/pages/Top/: index.module.scss  index.tsx
src/stores/: deviceAtom.ts  portAtom.ts  universeAtom.ts
src/styles/: colors.module.scss  colors.scss  fonts.scss  global.scss  variables.module.scss  variables.scss
src/types/: bindings.ts
(+8 files in other folders)
